# JSON-Schema-Abstractor

./: README.md  lib.rs  schema_gen.rs
project context/: json_schema_generator.yml
project context/json_schema_generator/: Dockerfile  json_schema_generator.yml  template.yml
project context/json_schema_generator/function/: Cargo.toml
project context/json_schema_generator/function/src/: example_data.json  lib.rs  schema_gen.rs
project context/json_schema_generator/interface_subsystems/: Cargo.toml
project context/json_schema_generator/interface_subsystems/src/: lib.rs
project context/json_schema_generator/interface_subsystems/src/errors/: mod.rs
project context/json_schema_generator/interface_subsystems/src/interfaces/: mod.rs
project context/json_schema_generator/interface_subsystems/src/mocks/: mod.rs  serverless.rs
project context/json_schema_generator/main/: Cargo.toml
project context/json_schema_generator/main/src/: main.rs
project context/json_schema_generator/util_cmd/: Cargo.toml
project context/json_schema_generator/util_cmd/src/: lib.rs
project context/json_schema_generator/util_cmd/src/net/: faas.rs  mod.rs  nats.rs
project context/json_schema_generator/util_settings/: Cargo.toml
project context/json_schema_generator/util_settings/src/: faas.rs  lib.rs  nats.rs  pgsql.rs  redis.rs
