[package]
name = "handler"
version = "0.1.0"
authors = ["KodiakCrypto <62376262+kodiakcrypto@users.noreply.github.com>"]
edition = "2018"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }

util_cmd = {path = "../util_cmd"}
interface_subsystems = {path = "../interface_subsystems"}

serde_json = "1.0.60"
async-trait = "0.1.42"
tokio = { version = "0.2.23", features = ["macros"] }

infers-jsonschema = "0.1"
assert-json-diff = "1.1.0"
valico = "3"