[package]
name = "interface_subsystems"
version = "0.1.0"
authors = ["Kevin Hill <kah.kevin.hill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
async-trait = "0.1.42"
lazy_static = "1.4.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
serde_json = "1.0.60"
slog = "2.7.0"
sloggers = "1.0.1"
thiserror = "1.0"
tokio = { version = "0.2.23", features = ['full'] }
