[package]
name = "util_cmd"
version = "0.1.0"
authors = ["Kevin Hill <kah.kevin.hill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envmnt = "0.8.4"
lazy_static = "1.4.0"
nats = "0.8.6"
reqwest = {version="0.10.9", features = ["blocking", "json"] }
serde_json = "1.0.60"
util_settings = {path = "../util_settings"}